# CS-S-Server-Downloader

./: Cargo.toml  download.rs  main.rs
.cargo/: config.toml
src/: download.rs  main.rs
