[package]
name = "downloader"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced.features = ["tokio"]
flate2 = "1.0.27"
zip = "0.6.6"
winreg = "0.51"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]